--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 sitemap.xml
 sitemap.xml.gz
 wp-config.php
+wp-content/wp-admin
+wp-content/wp-includes
 wp-content/advanced-cache.php
 wp-content/backup-db/
 wp-content/backups/
